[package]
name = "iroh-mesh"
version = "0.1.0"
edition = "2021"
description = "P2P Service Mesh for Kubernetes using iroh"
license = "MIT OR Apache-2.0"
authors = ["iroh-mesh contributors"]
repository = "https://github.com/n0-computer/iroh"
keywords = ["kubernetes", "service-mesh", "p2p", "iroh", "networking"]

[dependencies]
# Core iroh dependencies
iroh = { path = "../iroh", default-features = false }
iroh-base = { path = "../iroh-base", default-features = false, features = ["key", "relay"] }
n0-watcher = "0.3"

# Kubernetes client
kube = { version = "0.93", features = ["client", "derive", "runtime", "rustls-tls"] }
k8s-openapi = { version = "0.23", features = ["v1_30"] }

# Async runtime and utilities
tokio = { version = "1.41", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"

# HTTP and networking
hyper = { version = "1.5", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling and logging
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Networking and system
nix = { version = "0.29", features = ["net"], optional = true }
socket2 = "0.5"

# Configuration and CLI
clap = { version = "4.5", features = ["derive", "env"] }
config = "0.14"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
dashmap = "6.1"
arc-swap = "1.7"
rand = "0.8"

[dev-dependencies]
tempfile = "3.13"
wiremock = "0.6"

[features]
default = ["proxy", "agent"]
proxy = []
agent = []
interceptor = ["nix"]

[[bin]]
name = "iroh-proxy"
path = "src/bin/proxy.rs"
required-features = ["proxy"]

[[bin]]
name = "iroh-agent"
path = "src/bin/agent.rs"
required-features = ["agent"]